--- a/demo/isu-input-jedate/index.html
+++ b/demo/isu-input-jedate/index.html
@@ -208,7 +208,7 @@
         }
       </style>
     </custom-style>
-    <isu-input-jedate class="input-date multi" label="默认初始赋值" format="YYYY-MM-DD" placeholder="YYYY年MM月DD日" isinit-val></isu-input-jedate>
+    <isu-input-jedate class="input-date multi" label="默认初始赋值" format="YYYY-MM-DD" placeholder="YYYY年MM月DD日" isinit-val value="2020-07-04"></isu-input-jedate>
     <isu-input-jedate class="input-date multi" label="只读" format="YYYY年MM月DD日" placeholder="YYYY年MM月DD日" timestamp="1517760000000" readonly></isu-input-jedate>
     <isu-input-jedate class="input-date multi" label="只读文本" format="YYYY年MM月DD日" placeholder="YYYY年MM月DD日" timestamp="1517760000000" readonly is-view></isu-input-jedate>
   </template>
