--- a/demo/isu-select-tree/index.html
+++ b/demo/isu-select-tree/index.html
@@ -60,6 +60,8 @@
       <isu-select-tree id="orgtree2" label="组织（传入数据）" placeholder="请选择" value="21"></isu-select-tree>
 
       <isu-select-tree-new id="orgtree3" label="组织(模拟url)新" placeholder="请选择" src="/init.do"
+                           multi value="2111,2112,2113,2114,2115" only-select-level="3,4"></isu-select-tree-new>
+      <isu-select-tree-new id="orgtree3" label="组织(模拟url)新(只读）" placeholder="请选择" src="/init.do"
                            multi value="2111,13,14" readonly is-view only-select-level="2"></isu-select-tree-new>
       <script>
         orgtree2.treeData = [
